<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ROOM "
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_el_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_el_apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_la_edad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLastName" />

    <HorizontalScrollView
        android:id="@+id/scButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnInsertar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insertar" />
            <Button
                android:id="@+id/btnConsultar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find" />

            <!--  1) Obtener usuarios mayores de X (edad ingrsada en el edit text) -->
            <Button
                android:id="@+id/btnFindUserByEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1findbyage" />
            <!-- 2) Obtener usuarios con el apellido ingresado en el edit text -->
            <Button
                android:id="@+id/btnFindUserByApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2bylastname" />
            <Button
                android:id="@+id/btnBorrarTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleteall" />

            <!--  3) Borrar usuarios menores de X (edad ingrsada en el edit text) -->
            <Button
                android:id="@+id/btnDeleteByAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3dellbyage" />

            <Button
                android:id="@+id/btnCountUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4countusers" />

            <Button
                android:id="@+id/btn5LastUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5lastuser" />

            <Button
                android:id="@+id/btn6UsersWithJ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6userwhitj" />"
            <Button
                android:id="@+id/btn7MediaAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7mediaage"
                />

            <Button
                android:id="@+id/btn8Youngest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8youngestuser"/>

            <Button
                android:id="@+id/btn9LongestName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9longestname"/>

            <Button
                android:id="@+id/btn10Palindromos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10countpalind"/>


        </LinearLayout>


    </HorizontalScrollView>


    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/introduce_el_usario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEdad" />


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scButtons"
        >

        <TextView
            android:id="@+id/tvListadoUsuarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/usuarios"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/clBotonesModificar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDeleteByAge" />

    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clBotonesModificar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnActualizarUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/acutalizar_usuario"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnEliminarUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar_usuario"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>